Changes related to code in posts

--- a/package.json
+++ b/package.json
@@ -15,14 +15,9 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.1",
-    "@theme-ui/prism": "^0.2.46",
-    "@theme-ui/typography": "^0.2.46",
-    "@weknow/gatsby-remark-twitter": "^0.2.3",
     "babel-plugin-styled-components": "^1.10.6",
-    "deepmerge": "^4.2.2",
     "gatsby": "^2.17.15",
     "gatsby-image": "^2.2.33",
-    "gatsby-plugin-feed": "^2.3.21",
     "gatsby-plugin-mdx": "^1.0.56",
     "gatsby-plugin-react-helmet": "^3.1.15",
     "gatsby-plugin-sharp": "^2.3.0",
@@ -30,20 +25,18 @@
     "gatsby-remark-copy-linked-files": "^2.1.30",
     "gatsby-remark-images": "^3.1.31",
     "gatsby-remark-import-code": "^0.1.1",
+    "gatsby-remark-prismjs": "^3.3.24",
     "gatsby-remark-smartypants": "^2.1.16",
     "gatsby-source-filesystem": "^2.1.37",
+    "gatsby-transformer-remark": "^2.6.37",
     "gatsby-transformer-sharp": "^2.3.5",
     "mdx-utils": "^0.2.0",
+    "prismjs": "^1.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-toggle": "^4.1.1",
-    "rehype-waves": "^0.1.4",
     "remark-slug": "^5.1.2",
     "styled-breakpoints": "^7.0.0",
-    "styled-components": "^4.4.1",
-    "typeface-merriweather": "^0.0.72",
-    "typeface-montserrat": "^0.0.75",
-    "typography-theme-wordpress-2016": "^0.16.19"
+    "styled-components": "^4.4.1"
   }
 }
