--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^2.17.15",
     "gatsby-image": "^2.2.33",
     "gatsby-plugin-mdx": "^1.0.56",
+    "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.3.0",
     "gatsby-plugin-styled-components": "^3.1.13",
