--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.17.15",
     "gatsby-image": "^2.2.33",
+    "gatsby-plugin-manifest": "^2.2.37",
     "gatsby-plugin-mdx": "^1.0.56",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
