--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.17.15",
     "gatsby-image": "^2.2.33",
+    "gatsby-plugin-feed": "^2.3.26",
     "gatsby-plugin-google-analytics": "^2.1.33",
     "gatsby-plugin-manifest": "^2.2.37",
     "gatsby-plugin-mdx": "^1.0.56",
